--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
  Mouse Ctrl 
+
+ <script src="/javascripts/socket.io-1.4.5.js"></script>
+ <script>
+   var socket = io();
+   socket.on('ready', function(data){
+     console.log(data);
+     socket.emit('toServer', {some: "来自客户端的操作..."});
+   });
+ </script>
 </body>
 </html>
