--- a/index.html
+++ b/index.html
@@ -1,19 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
- Mouse Ctrl 
-
- <script src="/javascripts/socket.io-1.4.5.js"></script>
- <script>
-   var socket = io();
-   socket.on('ready', function(data){
-     console.log(data);
-     socket.emit('toServer', {some: "来自客户端的操作..."});
-   });
- </script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <title>MouseCtrl</title>
+    <link rel="stylesheet" href="styles/style.css">
+  </head>
+  <body>
+    <header>
+      <h1>MouseCtrl</h1>
+      <svg class="header-bg" viewBox="-1 -1 322 176" versi xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g id="Group" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-1.000000, -1.000000)">
+          <path d="M1.23242188,157.90625 C35.703125,164.261719 48.7675781,144.443359 103.281108,157.90625 C157.794638,171.369141 181.911428,146.488281 226.580714,157.90625 C271.25,169.324219 321.007801,157.90625 321.007801,157.90625 L321.007801,0.89737309 L0.954900886,0.89737309" id="Path-2" fill="#FFFFFF"></path>
+          <path d="M1.27752099,168.580352 C35.7482241,175.367891 48.8126772,154.202199 103.326207,168.580352 C157.839738,182.958504 181.956527,156.386143 226.625813,168.580352 C271.295099,180.77456 321.0529,168.580352 321.0529,168.580352 L321.0529,0.89737309 L1,0.89737309" id="Path-2" fill-opacity="0.1" fill="#FFFFFF" transform="translate(161.026450, 87.448687) scale(-1, 1) translate(-161.026450, -87.448687) "></path>
+          <path d="M1.09375,163.859375 C1.09375,163.859375 28.5820313,157.779297 111.460938,172.112305 C194.339844,186.445312 194.676758,152.396484 243.40625,169.224609 C292.135742,186.052734 321.432617,164.938477 321.432617,164.938477 L321.276367,0.670898438 L1.30362794,0.670898437 L1.09375,163.859375 Z" id="Path-3" fill-opacity="0.1" fill="#FFFFFF"></path>
+        </g>
+      </svg>
+    </header>
+    <div class="operation">
+      <div class="top row" onclick="go('top')">
+        <svg width="36px" height="10px" viewBox="100 0 36 10" versi xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <polyline id="Path-6" stroke="#FFFFFF" stroke-width="1" fill="none" transform="translate(118.172788, 5.127678) scale(-1, -1) rotate(270.000000) translate(-118.172788, -5.127678) " points="122.345576 -12 114 4.95040435 122.303928 22.2553569"></polyline>
+        </svg>
+      </div>
+      <div class="left-click-right-wrap row">
+        <div onclick="go('left')">
+          <svg width="10px" height="36px" viewBox="-1 97 10 36" versi xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <polyline id="Path-6" stroke="#FFFFFF" stroke-width="1" fill="none" transform="translate(4.172788, 115.127678) scale(-1, 1) rotate(180.000000) translate(-4.172788, -115.127678) " points="8.34557636 98 7.10542736e-15 114.950404 8.30392784 132.255357"></polyline>
+          </svg>
+        </div>
+        <div onclick="go('click')">
+          <svg width="92px" height="92px" viewBox="114 318 92 92" versi xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g id="Group-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(114.000000, 318.000000)">
+              <circle id="Oval-3" fill="#FFFFFF" cx="46" cy="46" r="37"></circle>
+              <circle id="Oval-3" fill-opacity="0.2" fill="#FFFFFF" cx="46" cy="46" r="46"></circle>
+            </g>
+          </svg>
+        </div>
+        <div onclick="go('right')">
+          <svg width="10px" height="36px" viewBox="232 97 10 36" versi xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <polyline id="Path-6" stroke="#FFFFFF" stroke-width="1" fill="none" transform="translate(237.172788, 115.127678) rotate(180.000000) translate(-237.172788, -115.127678) " points="241.345576 98 233 114.950404 241.303928 132.255357"></polyline>
+          </svg>
+        </div>
+      </div>
+      <div class="bottom row" onclick="go('bottom')">
+        <svg width="36px" height="10px" viewBox="100 222 36 10" versi xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <polyline id="Path-6" stroke="#FFFFFF" stroke-width="1" fill="none" transform="translate(118.172788, 227.127678) scale(-1, 1) rotate(270.000000) translate(-118.172788, -227.127678) " points="122.345576 210 114 226.950404 122.303928 244.255357"></polyline>
+        </svg>
+      </div>
+    </div>
+    <script src="/javascripts/socket.io-1.4.5.js"></script>
+    <script>
+      var socket = io();
+      function go (action){
+        socket.emit('setMouse', {action: action});
+      }
+      socket.on('ready', function(data){
+        console.log(data.status);
+      });
+    </script>
+  </body>
 </html>
